--- a/data/projects.json
+++ b/data/projects.json
@@ -44,7 +44,7 @@
   {
     "name": "LIFX Audio Show",
     "link": "https://github.com/locmai1/lifx-audio-show",
-    "description": "Command Line",
+    "description": "Command Line + GUI",
     "status": "Complete"
   },
   {
