--- a/data/projects.json
+++ b/data/projects.json
@@ -44,13 +44,13 @@
   {
     "name": "LIFX Audio Show",
     "link": "https://github.com/locmai1/lifx-audio-show",
-    "description": "Command Line + GUI",
+    "description": "GUI Visualization",
     "status": "Complete"
   },
   {
     "name": "LIFX Spotify Show",
     "link": "https://github.com/locmai1/lifx-spotify-show",
-    "description": "Unpublished",
+    "description": "Web Application",
     "status": "Complete"
   }
 ]
