--- a/data/projects.json
+++ b/data/projects.json
@@ -9,7 +9,7 @@
     "name": "Captionator",
     "link": "https://captionator.netlify.app/",
     "description": "Web Application",
-    "status": "Current"
+    "status": "Complete"
   },
   {
     "name": "FaceTracks",
