--- a/package.json
+++ b/package.json
@@ -6,11 +6,13 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "prettier": "prettier --write '**/*.{ts,tsx,css}'"
   },
   "dependencies": {
     "next": "14.0.2",
     "next-themes": "^0.2.1",
+    "prettier": "^3.3.3",
     "react": "^18",
     "react-dom": "^18"
   },
